--- a/public/views/frodo.html
+++ b/public/views/frodo.html
@@ -1,3 +1,5 @@
 <section>
     hey this is the frodo view!
+
+    <!-- <ng-show: https://i.pinimg.com/564x/7a/98/a7/7a98a736efdb6e2147f8173611c5f059--hobbit-hole-the-hobbit.jpg -->
 </section>
