everything is working

--- a/public/views/frodo.html
+++ b/public/views/frodo.html
@@ -1,5 +1,17 @@
 <section>
-    hey this is the frodo view!
+    <header>
+       <h1> Frodo Baggins of the Shire</h1>
+    </header>
 
-    <!-- <ng-show: https://i.pinimg.com/564x/7a/98/a7/7a98a736efdb6e2147f8173611c5f059--hobbit-hole-the-hobbit.jpg -->
+    <body>
+            <img src="https://i.pinimg.com/564x/7a/98/a7/7a98a736efdb6e2147f8173611c5f059--hobbit-hole-the-hobbit.jpg"/>
+
+    </body>    
+
+
+    
+    <footer>
+        <h2> Frodo saves the day.</h2>
+    </footer>
+
 </section>
