--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,15 @@
-
 <section>
-   Home view.
-</section>
+    <header>
+        <h1>The Shire </h1>
+    </header>
+                    
+    <body>
+        <img src="https://i.ytimg.com/vi/N1icEHtgb3g/maxresdefault.jpg"/>
+                                
+    </body>    
+                    
+    <footer>
+        <h2>Click the buttons to learn more about the characters.</h2>
+    </footer>
+                    
+    </section>
